<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:layout_height="140dp"
    tools:ignore="SmallSp">

    <TextView
        android:id="@+id/name_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/name_holder"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/engine_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:textSize="11sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/engine"
        android:text="@string/engine" />

    <TextView
        android:id="@+id/engine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CE" />

    <TextView
        android:id="@+id/address_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:text="@string/address" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/address_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/vin_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        android:text="@string/vin" />

    <TextView
        android:id="@+id/vin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/vin_holder"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:text="@tools:sample/cities" />

    <TextView
        android:id="@+id/fuel_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/exterior"
        app:layout_constraintTop_toBottomOf="@+id/conditions"
        android:text="@string/fuel" />

    <TextView
        android:id="@+id/fuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/fuel_holder"
        app:layout_constraintTop_toBottomOf="@+id/conditions"
        tools:text="50" />

    <TextView
        android:id="@+id/conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_condition"
        android:textSize="11sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/vin"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/interior_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditions"
        android:text="@string/interior" />

    <TextView
        android:id="@+id/interior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/interior_holder"
        app:layout_constraintTop_toBottomOf="@+id/conditions"
        tools:text="GOOD" />

    <TextView
        android:id="@+id/exterior_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/interior"
        app:layout_constraintTop_toBottomOf="@+id/conditions"
        android:text="@string/exterior" />

    <TextView
        android:id="@+id/exterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/exterior_holder"
        app:layout_constraintTop_toBottomOf="@+id/conditions"
        tools:text="UNACCEPTABLE" />

</android.support.constraint.ConstraintLayout>